made the selection declarations use the preset variables instead

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 // This scss file is for any styles that are unique to this specific site and not very reusable for the future (not modular components)
 
 ::selection {
-  background-color: #55c57a;
-  color: #fff;
+  background-color: $color-primary;
+  color: $color-white;
 }
 
 .section-about {
