created a modal component as well as it's own scss file

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@
 @import './components/testimonial';
 @import './components/bg-video';
 @import './components/booking-form';
+@import './components/modal';
 
 // Layout
 @import './layout/grid';
