--- a/src/css/style.css
+++ b/src/css/style.css
@@ -478,6 +478,23 @@ body {
   opacity: 1;
   background-color: #55c57a; }
 
+.modal {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 400; }
+  .modal__content {
+    height: 75%;
+    width: 75%;
+    background-color: orangered;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
