--- a/src/css/style.css
+++ b/src/css/style.css
@@ -480,20 +480,21 @@ body {
 
 .modal {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 400; }
   .modal__content {
-    height: 75%;
-    width: 75%;
-    background-color: orangered;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    transform: translate(-50%, -50%);
+    width: 75%;
+    height: 75%;
+    background-color: #fff;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2); }
 
 .row {
   max-width: 114rem;
