--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
   height: 100vh;
-  width: 100vw;
+  width: 100%; // 100vw would work as well
   background-color: rgba($color-black, 0.8);
 
   position: fixed;
@@ -10,10 +10,11 @@
   z-index: 400;
 
   &__content {
-    height: 75%;
-    width: 75%;
-    background-color: orangered;
-
     @include absolute-center;
+
+    width: 75%;
+    height: 75%; // Testing
+    background-color: $color-white;
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
   }
 }
