created full skeleton of the modal content box

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -494,7 +494,8 @@ body {
     width: 75%;
     height: 75%;
     background-color: #fff;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2); }
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px; }
 
 .row {
   max-width: 114rem;
