--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -16,5 +16,6 @@
     height: 75%; // Testing
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+    border-radius: $border-radius-small;
   }
 }
