--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -18,4 +18,18 @@
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
     border-radius: $border-radius-small;
   }
+
+  &__ {
+  }
+
+  &__ {
+  }
+
+  &__img {
+    display: block; // Usually a good idea for images
+    width: 100%;
+  }
+
+  &__ {
+  }
 }
