--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -19,10 +19,12 @@
     border-radius: $border-radius-small;
   }
 
-  &__ {
+  &__left {
+    width: 33.333333%;
   }
 
-  &__ {
+  &__right {
+    height: 66.666666%;
   }
 
   &__img {
@@ -31,5 +33,6 @@
   }
 
   &__ {
+    background-color: transparent;
   }
 }
