quick fix from height to width delaration

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -499,7 +499,7 @@ body {
   .modal__left {
     width: 33.333333%; }
   .modal__right {
-    height: 66.666666%; }
+    width: 66.666666%; }
   .modal__img {
     display: block;
     width: 100%; }
