used the table-cell trick to vertically align the 2 sides of the modal since they are the only things in the container and it would not interfere with any other css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -492,14 +492,19 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 75%;
-    height: 75%;
     background-color: #fff;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-    border-radius: 3px; }
+    border-radius: 3px;
+    display: table;
+    overflow: hidden; }
   .modal__left {
-    width: 33.333333%; }
+    width: 33.333333%;
+    display: table-cell;
+    vertical-align: middle; }
   .modal__right {
-    width: 66.666666%; }
+    width: 66.666666%;
+    display: table-cell;
+    vertical-align: middle; }
   .modal__img {
     display: block;
     width: 100%; }
