added some padding to the text on the left to make it look more centered and have more whitespace

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,7 +504,8 @@ body {
   .modal__right {
     width: 66.666666%;
     display: table-cell;
-    vertical-align: middle; }
+    vertical-align: middle;
+    padding: 3rem 5rem; }
   .modal__img {
     display: block;
     width: 100%; }
