added some margin to the bottom of the text to space it from the button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -509,8 +509,9 @@ body {
   .modal__img {
     display: block;
     width: 100%; }
-  .modal__ {
-    background-color: transparent; }
+  .modal__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem; }
 
 .row {
   max-width: 114rem;
