--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -41,7 +41,8 @@
     width: 100%;
   }
 
-  &__ {
-    background-color: transparent;
+  &__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem; // For margin between text and button
   }
 }
