--- a/src/css/style.css
+++ b/src/css/style.css
@@ -510,7 +510,9 @@ body {
     display: block;
     width: 100%; }
   .modal__text {
-    font-size: 1.4rem; }
+    font-size: 1.4rem;
+    column-count: 2;
+    column-gap: 4rem; }
 
 .row {
   max-width: 114rem;
