--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -43,5 +43,8 @@
 
   &__text {
     font-size: 1.4rem;
+
+    column-count: 2;
+    column-gap: 4rem; // By default it would use 1em, which whatever the parents (or this elements) font-size
   }
 }
