--- a/src/css/style.css
+++ b/src/css/style.css
@@ -512,7 +512,8 @@ body {
   .modal__text {
     font-size: 1.4rem;
     column-count: 2;
-    column-gap: 4rem; }
+    column-gap: 4rem;
+    column-rule: 1px solid #eee; }
 
 .row {
   max-width: 114rem;
