--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -44,7 +44,8 @@
   &__text {
     font-size: 1.4rem;
 
-    column-count: 2;
+    column-count: 2; // Heights of colums are automatically balanced, leaving the extra for the last column (which may be shorter)
     column-gap: 4rem; // By default it would use 1em, which whatever the parents (or this elements) font-size
+    column-rule: 1px solid $color-grey-light-2; // Line to divide columns
   }
 }
