--- a/src/css/style.css
+++ b/src/css/style.css
@@ -513,7 +513,11 @@ body {
     font-size: 1.4rem;
     column-count: 2;
     column-gap: 4rem;
-    column-rule: 1px solid #eee; }
+    column-rule: 1px solid #eee;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
 
 .row {
   max-width: 114rem;
