--- a/src/css/style.css
+++ b/src/css/style.css
@@ -485,7 +485,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 400; }
+  z-index: 400;
+  opacity: 0;
+  visibility: hidden; }
   .modal__content {
     position: absolute;
     top: 50%;
