created a pseudo-class for the anchor the book now buttons target, which makes the invisible modal visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -488,6 +488,9 @@ body {
   z-index: 400;
   opacity: 0;
   visibility: hidden; }
+  .modal:target {
+    opacity: 1;
+    visibility: visible; }
   .modal__content {
     position: absolute;
     top: 50%;
