added an X to the top right of the modal to close it by sending the user to the hikes section again, without the declarations of setting the modal visible

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -491,6 +491,14 @@ body {
   .modal:target {
     opacity: 1;
     visibility: visible; }
+  .modal__close:link, .modal__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block; }
   .modal__content {
     position: absolute;
     top: 50%;
