webpage finished! For desktop...

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,21 +489,6 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s; }
-  .modal:target {
-    opacity: 1;
-    visibility: visible; }
-  .modal__close:link, .modal__close:visited {
-    color: #777;
-    position: absolute;
-    top: 2.5rem;
-    right: 2.5rem;
-    font-size: 3rem;
-    text-decoration: none;
-    display: inline-block;
-    line-height: 1;
-    transition: all 0.2s; }
-  .modal__close:hover {
-    color: #ff7730; }
   .modal__content {
     position: absolute;
     top: 50%;
@@ -514,7 +499,10 @@ body {
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.4s 0.2s; }
   .modal__left {
     width: 33.333333%;
     display: table-cell;
@@ -536,6 +524,24 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+  .modal:target {
+    opacity: 1;
+    visibility: visible; }
+  .modal:target .modal__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .modal__close:link, .modal__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    line-height: 1;
+    transition: all 0.2s; }
+  .modal__close:hover {
+    color: #ff7730; }
 
 .row {
   max-width: 114rem;
