created comments just explaining the strategy and breakpoints that this app will use for responsiveness

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -27,3 +27,11 @@
 }
 
 // MEDIA QUERY MANAGER
+
+// Desktop-first approach
+
+// 0 - 600px: ------------- Phone
+// 600 - 900px: ----------- Tablet portrait
+// 900 - 1200px: ---------- Tablet landscape
+// [1200 - 1800] is where our default styles apply
+// 1800 - ∞px: ----- Big desktop
