created a mixin for phone responsiveness with a content directive to allow for passing of entire blocks of code

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -35,3 +35,9 @@
 // 900 - 1200px: ---------- Tablet landscape
 // [1200 - 1800] is where our default styles apply
 // 1800 - ∞px: ----- Big desktop
+
+@mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
