upgraded the media query manager by created a mixin with if statements asking what the breakpoint is and when we pass that through, it will apply at that px range. this will make changing breakpoints very easy in the future, as we can change it in one place and it will apply appwide

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,9 @@
 /* Style imports (Every partial imported into here will be available app-wide) */
+/* @mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+} */
 @keyframes moveInLeft {
   0% {
     opacity: 0;
