--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -36,8 +36,27 @@
 // [1200 - 1800] is where our default styles apply
 // 1800 - ∞px: ----- Big desktop
 
-@mixin respond-phone {
+/* @mixin respond-phone {
   @media (max-width: 600px) {
     @content;
+  }
+} */
+
+// $breakpoint argument choices:
+// - phone
+// - tab-port
+// - tab-land
+// - big-desktop
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+  }
+
+  @if $breakpoint == tab-port {
+  }
+
+  @if $breakpoint == tab-land {
+  }
+
+  @if $breakpoint == big desktop {
   }
 }
