--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -36,27 +36,47 @@
 // [1200 - 1800] is where our default styles apply
 // 1800 - ∞px: ----- Big desktop
 
-/* @mixin respond-phone {
-  @media (max-width: 600px) {
-    @content;
-  }
-} */
-
 // $breakpoint argument choices:
 // - phone
 // - tab-port
 // - tab-land
 // - big-desktop
+
+// em and rems are NOT affected by our root (html element 62.5%) font-size setting, which means 1rem in a media query is affected only by browser default (16px), but if user changes it, our queries will adapt (which is good)
+// 1em = 16px: We use em because rem does not always work as intended in all browsers
+// em has been studied and determined to be the best for media queries, since we still want our breakpoints to adjust to the users default, otherwise the whole pages rem will scale without out media queries kicking in (if they were in px units)
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
+    // Smaller than 600px (600/16)
+    @media (max-width: 37.5em) {
+      @content;
+    }
   }
 
   @if $breakpoint == tab-port {
+    // Smaller than 900px (900/16)
+    @media (max-width: 56.25em) {
+      @content;
+    }
   }
 
   @if $breakpoint == tab-land {
+    // Smaller than 1200px (1200/16)
+    @media (max-width: 75em) {
+      @content;
+    }
   }
 
   @if $breakpoint == big desktop {
+    // Larger than 1800px (1800/16)
+    @media (min-width: 112.5em) {
+      @content;
+    }
   }
 }
+
+/* @mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+} */
