--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -19,6 +19,19 @@ html {
 
   // This defines what 1rem is
   font-size: 62.5%;
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
+  @include respond(tab-port) {
+    font-size: 60%;
+  }
+  @include respond(tab-land) {
+    font-size: 70%;
+  }
+  @include respond(big-desktop) {
+    font-size: 80%;
+  }
 }
 
 // Setting this is body because fonts will be inherited by child elements
