--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,28 +44,25 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
-  @media (max-width: 37.5em) {
-    html {
-      font-size: 50%; } }
-  @media (min-width: 112.5em) {
-    html {
-      font-size: 50%; } }
-  @media (max-width: 56.25em) {
-    html {
-      font-size: 60%; } }
-  @media (min-width: 112.5em) {
-    html {
-      font-size: 60%; } }
+  font-size: 62.5%;
+  /*   @include respond(phone) {
+    font-size: 50%; // We want the 8px like below, so since both media queries would apply under 600px, this one is redundant
+  } */ }
   @media (max-width: 75em) {
     html {
-      font-size: 70%; } }
+      font-size: 56.25%; } }
   @media (min-width: 112.5em) {
     html {
-      font-size: 70%; } }
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
   @media (min-width: 112.5em) {
     html {
-      font-size: 80%; } }
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
