--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -43,4 +43,10 @@ html {
 body {
   // Instead of height being top border + top padding + declared height + bottom padding + bottom border, it will simply be the declared height with the border & padding extending inwards
   box-sizing: border-box; // This makes the box model not count borders/paddings in total height/width, and will extend to all children and their children because it is set to inherit in the * selecto
+  padding: 3rem; // This is in base because it encompasses the whole app and all the content is within this border
+
+  @include respond(tab-port) {
+    // width < 900px?
+    padding: 0;
+  }
 }
