--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -6,7 +6,6 @@ body {
   //   font-size: 1.6rem;
   line-height: 1.7; // 1.7x larger than the default
   color: $color-grey-dark-1;
-  padding: 3rem;
 }
 
 // Primary heading is the main heading of the page (OUTDOORS IS WHERE LIFE HAPPENS)
@@ -25,14 +24,18 @@ body {
 
     animation-name: moveInLeft;
     animation-duration: 1s;
-    animation-timing-function: ease-out; // (???) Research this property more later
+    animation-timing-function: ease-out; // The cubic bezier algorithm
+
+    // ▩▩▩ MEDIA QUERIES ▩▩▩
+    @include respond(phone) {
+      letter-spacing: 1rem;
+    }
 
     /*
     animation-delay: 1s;
     animation-iteration-count: 3;
     */
   }
-
   &--sub {
     display: block; // Displayed as block to show underneath the main title
     font-size: 2rem;
@@ -40,6 +43,11 @@ body {
     letter-spacing: 1.75rem;
 
     animation: moveInRight 1s ease-out;
+
+    // ▩▩▩ MEDIA QUERIES ▩▩▩
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -52,7 +60,15 @@ body {
 
   @include text-gradient(45deg, $color-primary-light, $color-primary-dark);
 
-  // heading-secondary:hover
+  // ▩▩▩ MEDIA QUERIES ▩▩▩
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
   &:hover {
     // skew stretches the element in opposite directions along the stated axis (x or y), while scale just makes it larger
     transform: skewY(0.5deg) skewX(2deg) scale(1.05);
