removed the margin gutters for all columns in the grid system on portrait view because we want them to all be 100% now, so 1x1 columns rows now

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -598,6 +598,10 @@ body {
 
 .row {
   max-width: 114rem;
+  /* 
+  @include respond(tab-port) {
+    max-width: 90%;
+  } */
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -609,6 +613,18 @@ body {
     float: left; }
     .row [class^='col-']:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^='col-']:not(:last-child) {
+          margin-right: 0; } }
+      @media (min-width: 112.5em) {
+        .row [class^='col-']:not(:last-child) {
+          margin-right: 0; } }
+    @media (max-width: 56.25em) {
+      .row [class^='col-'] {
+        width: 100% !important; } }
+    @media (min-width: 112.5em) {
+      .row [class^='col-'] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc( (100% - 6rem) / 2); }
   .row .col-1-of-3 {
