--- a/src/css/style.css
+++ b/src/css/style.css
@@ -605,6 +605,12 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+    @media (min-width: 112.5em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
   .row::after {
     content: '';
     display: table;
@@ -621,10 +627,12 @@ body {
           margin-right: 0; } }
     @media (max-width: 56.25em) {
       .row [class^='col-'] {
-        width: 100% !important; } }
+        width: 100% !important;
+        margin-bottom: 6rem; } }
     @media (min-width: 112.5em) {
       .row [class^='col-'] {
-        width: 100% !important; } }
+        width: 100% !important;
+        margin-bottom: 6rem; } }
   .row .col-1-of-2 {
     width: calc( (100% - 6rem) / 2); }
   .row .col-1-of-3 {
