--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -23,7 +23,7 @@ $color-black: #000;
 $default-font-size: 1.6rem;
 
 // Grid sizes
-$grid-width: 114rem;
+$grid-width: 114rem; // Traditional width for grid systems
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
