--- a/src/css/style.css
+++ b/src/css/style.css
@@ -603,6 +603,12 @@ body {
     max-width: 90%;
   } */
   margin: 0 auto; }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem; } }
+  @media (min-width: 112.5em) {
+    .row {
+      max-width: 50rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
