--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -17,6 +17,11 @@
     100% 75vh,
     0 100%
   ); // Defines corners of the element from top left going clockwise
+
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
   position: relative;
 
   &__logo-box {
